# battlesnake-rs

./: .dockerignore  .gitignore  CHECKS  Cargo.toml  Dockerfile  Procfile  README.md  fly.toml  rust-toolchain.toml
.circleci/: config.yml
.github/workflows/: _clippy.yml  _doc.yml  _fmt.yml  _test.yml  benches.yml  ci.yml  release.yml  rust_deploy.yml  rust_tests.yml
battlesnake-minimax/: Cargo.toml
battlesnake-minimax/src/: eval.rs  lazy_smp.rs  lib.rs  minimax_return.rs  score.rs
battlesnake-minimax/src/paranoid/: cached_score.rs  eval.rs  minimax_return.rs  mod.rs  move_ordering.rs  score.rs
battlesnake-rs/: Cargo.toml
battlesnake-rs/benches/: a-prime.rs  devin.rs  flood-fill.rs  hobbs.rs  improbable_irene.rs  mcts.rs  my_benchmark.rs
battlesnake-rs/fixtures/: a-prime-food-maze.json  arcade_2.json  arcade_maze_into_tunnel.json  check_board_doubled_up.json  new_start.json  spl-large-hazard.json  start_of_game.json
battlesnake-rs/src/: a_prime.rs  amphibious_arthur.rs  bombastic_bob.rs  compact_a_prime.rs  constant_carter.rs  devious_devin.rs  devious_devin_eval.rs  devious_devin_full.rs  devious_devin_mutable.rs  devious_devin_two.rs  eremetic_eric.rs  famished_frank.rs  flood_fill.rs  flood_fill_snake.rs  gigantic_george.rs  hovering_hobbs.rs  improbable_irene.rs  jump_flooding_snake.rs  lib.rs  mcts_snake.rs  multi_neighbor.rs  opentelemetry_rocket.rs  spread_from_head_snake.rs  threads.rs  tmp.rs
battlesnake-rs/src/flood_fill/: jump_flooding.rs  mod.rs  spread_from_head.rs  spread_from_head_arcade_maze.rs  spread_from_head_hazard_walls.rs
battlesnake-rs/src/minimax/: eval.rs
fixtures/: 095b30fa-f2c7-4826-ac93-90b4dde6b785_5.json  095b30fa-f2c7-4826-ac93-90b4dde6b785_6.json  130b18e2-8689-4d64-a09f-c4345f80ae79_25.json  45e7de53-bca5-4fa3-8771-d9914ed141bb.json  4f198c01-d613-4109-b8b9-226208cde009_505.json  65401e8f-a92a-445f-9617-94770044e117.json  6d9cd0b1-6829-4430-926c-562918397774_101.json  7311099d-b98a-4589-9b05-32dc80362bcc_135.json  7a02e19b-f658-4639-8ace-ece46629a6ed_192.json  95d72d73-352b-4ad5-83e4-86139fa556a9_54.json  af943832-1b3b-4795-9e35-081f71959aee_108.json  arcade_maze_end_game_duels.json  arcade_maze_should_lose_next_turn.json  arcade_maze_should_win.json  b6a045ae-abf2-4f6f-b04c-a80ace7881b4_399.json  c2aee0d9-30dc-47ee-bd25-38e67e0fee9d_96.json  d9841bf6-c34f-42fb-8818-dfd5d5a09b4a_125.json  df732ab7-7e22-41d8-b651-95bb912e45ab.json  less_basic_expand_mcts.json  mojave_12_18_12_34.json
fuzzer/: Cargo.toml
fuzzer/src/: fuzz.rs  main.rs
hurl_tests/: end_constant_carter.hurl  graph_mcts.hurl  info_constant_carter.hurl  move_constant_carter.hurl  move_mcts.hurl  start_bombastic_bob.hurl  start_constant_carter.hurl
hurl_tests/fixtures/: start_of_game.json
script/: auto.sh  average_of_ten_runs.sh  duels.rb  hurl
sherlock/: Cargo.toml  README.md
sherlock/src/: commands.rs  main.rs  unofficial_api.rs  websockets.rs
sherlock/src/commands/: archive.rs  archive_all.rs  archive_snake.rs  archive_user.rs  fixture.rs  replay.rs  solve.rs
src/: amphibious_arthur.rs  bombastic_bob.rs  constant_carter.rs  devious_devin.rs  lib.rs  main.rs  opentelemetry_rocket.rs
types/: Cargo.toml
types/src/: lib.rs
web-axum/: Cargo.toml
web-axum/src/: hobbs.rs  main.rs
web-lambda/: Cargo.toml  samconfig.toml  template.yml
web-lambda/scripts/: build.sh  deploy.sh
web-lambda/src/: main.rs
web-rocket/: Cargo.toml
web-rocket/src/: main.rs
