[package]
name = "battlesnake-rs"
version = "0.1.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
itertools = "0.10.0"
