[workspace]

members = [
    "battlesnake-rs",
    "battlesnake-minimax",
    "web-lambda",
    "web-rocket",
    "web-axum",
    "sherlock",
]

[workspace.dependencies]
battlesnake-game-types = { git = "https://github.com/fables-tales/battlesnake-game-types.git", branch = "ca/main/stacked-hazards" }
