[workspace]
resolver = "2"

members = [
    "battlesnake-rs",
    "battlesnake-minimax",
    "web-lambda",
    "web-rocket",
    "web-axum",
    "sherlock",
    "fuzzer",
]

[workspace.dependencies]
battlesnake-game-types = { git = "https://github.com/fables-tales/battlesnake-game-types.git", branch = "ca/main/stacked-hazards" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3-prerelease04"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
