[package]
name = "battlesnake-minimax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# battlesnake-game-types = "0.11.1"
# battlesnake-game-types = { git = "https://github.com/penelopezone/battlesnake-game-types.git", branch = "main" }
battlesnake-game-types = { git = "https://github.com/coreyja/battlesnake-game-types.git", rev = "e7974e5" }
# battlesnake-game-types = { path = "../../battlesnake-game-types" }

itertools = "0.10.0"
debug_print = "1.0.0"
tracing = "0.1.26"
text_trees = "0.1.2"
derivative = "2.2.0"
