[package]
name = "battlesnake-minimax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }

itertools = "0.10.0"
debug_print = "1.0.0"
tracing = "0.1.26"
text_trees = "0.1.2"
derivative = "2.2.0"

[dev-dependencies]
serde_json = "1.0.79"
