[package]
name = "battlesnake-rs"
version = "0.1.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
itertools = "0.10.0"
debug_print = "1.0.0"
tracing = "0.1.26"
battlesnake-game-types = { git = "https://github.com/coreyja/battlesnake-game-types.git", branch = "ca/main/add-more-interfaces" }
rustc-hash = "1.1.0"
# battlesnake-game-types = { path = "../../battlesnake-game-types" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.5", features = ["flamegraph", "criterion"] }

[lib]
name = "battlesnake_rs"
path = "src/lib.rs"

[[bench]]
name = "devin"
harness = false

[[bench]]
name = "a-prime"
harness = false
