[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battlesnake-rs = { path = "../battlesnake-rs" }
itertools = "0.10.3"
rand = "0.8.5"

serde_json = "1.0.82"
ureq = { version = "2.4.0", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["rustls-tls", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
color-eyre = "0.6.2"
battlesnake-game-types = { workspace = true }
