[package]
name = "sherlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
ureq = { version = "2.4.0", features = ["json"] }
clap = { version = "3.2.8", features = ["derive"] }

types = { path = "../types" }

battlesnake-minimax = { path = "../battlesnake-minimax" }
itertools = "0.10.3"
serde = { version = "1.0.144", features = ["derive"] }
color-eyre = "0.6.2"
axum = { version = "0.5.16", features = ["ws"] }
tokio = { version = "1.21.0", features = ["full"] }
tungstenite = { version = "0.17.3", features = ["rustls-tls-native-roots"] }
url = { version = "2.3.1", features = ["serde"] }
tower-http = { version = "0.3.4", features = ["cors"] }
scraper = "0.13.0"
colored = "2.0.0"
term = "0.7.0"
