[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# battlesnake-game-types = "0.11.1"
# battlesnake-game-types = { git = "https://github.com/penelopezone/battlesnake-game-types.git", branch = "main" }
battlesnake-game-types = { git = "https://github.com/coreyja/battlesnake-game-types.git", rev = "59d2352" }
# battlesnake-game-types = { path = "../../battlesnake-game-types" }
