[package]
name = "web-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
battlesnake-rs = { path = "../battlesnake-rs" }
battlesnake-minimax = { path = "../battlesnake-minimax" }

axum = { version = "0.6.0-rc.4"  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0.56"
tower = "0.4.12"
tracing-opentelemetry = "0.17.2"
tracing-honeycomb = { git = "https://github.com/coreyja/tracing-honeycomb", rev = "862dade", features = ["use_parking_lot"] }
tracing-tree = "0.2.1"
tower-http = { version = "0.3.4", features = ["tracing", "trace"] }
axum-macros = "0.3.0-rc.3"
itertools = "0.10.5"
parking_lot = "0.12.1"
fxhash = "0.2.1"
# tracing-honeycomb = { path = "../../tracing-honeycomb/tracing-honeycomb" }
