[package]
name = "web-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
battlesnake-rs = { path = "../battlesnake-rs" }
battlesnake-minimax = { path = "../battlesnake-minimax" }

axum = { version = "0.6.0"  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4.12"
tracing-tree = "0.2.1"
tower-http = { version = "0.3.4", features = ["tracing", "trace"] }
axum-macros = "0.3.0"
itertools = "0.10.5"
parking_lot = "0.12.1"
fxhash = "0.2.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"], default-features = false }
opentelemetry-otlp = { version = "0.11.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
tracing-opentelemetry = "0.18.0"
sentry = { version ="0.29.1", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
sentry-tower = { version = "0.29.1", features = ["http"] }
sentry-tracing = "0.29.1"
color-eyre = "0.6.2"
