[package]
name = "web-lambda"
version = "0.1.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battlesnake-rs = { path = "../battlesnake-rs" }
http = "0.2.4"
lambda_http = "0.3.0"
libhoney-rust = "0.1.3"
serde_json = "1.0.64"
tokio = "1.5.0"
tracing = "0.1.26"
tracing-honeycomb = "0.4.2"
tracing-subscriber = "0.2.20"
