[package]
name = "web-rocket"
version = "0.1.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battlesnake-rs = { path = "../battlesnake-rs" }
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
itertools = "0.10.0"
opentelemetry-honeycomb = { git = 'https://github.com/ramosbugs/opentelemetry-honeycomb-rs' }
opentelemetry = "0.12.0"
async_executors = { version = "0.4.0", features = ["tokio_tp"] }
debug_print = "1.0.0"
rocket_cors = "0.5.2"
