[package]
name = "web-rocket"
version = "0.1.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battlesnake-rs = { path = "../battlesnake-rs" }
rocket = "0.4.10"
rocket_contrib = "0.4.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
itertools = "0.10.0"
debug_print = "1.0.0"
rocket_cors = "0.5.2"
tracing-subscriber = "0.2.19"
tracing = "0.1.26"
